# graphcodebert-interpretability

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  ablation.py  ast-s.py  code_similarity.html  comparison.py  heatmap.py  pca.py  pumap.py  pyproject.toml  requirements.txt  saliency_maps.py  tf-s.py  tsne.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: REPRODUCIBILITY.md
examples/: demo_similarity.ipynb  quickstart.py
graphcodebert_interpretability/: __init__.py  __main__.py  baselines.py  cli.py  datasets.py  embeddings.py  model.py  projection.py  report.py  saliency.py  similarity.py  utils.py  visualize.py
tests/: conftest.py  test_baselines.py  test_cli.py  test_datasets.py  test_model_integration.py  test_projection.py  test_report_and_html.py  test_similarity_math.py
