[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphcodebert-interpretability"
version = "2.0.0"
description = "Interpretability toolkit for GraphCodeBERT and code language models: token similarity, gradient saliency, PCA/t-SNE/UMAP projections, baselines and reproducible benchmark reports."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Jorge Martinez-Gil", email = "jorgemarcc@gmail.com" }]
keywords = [
    "graphcodebert",
    "codebert",
    "interpretability",
    "explainable-ai",
    "xai",
    "code-similarity",
    "code-clone-detection",
    "saliency-maps",
    "attention-visualization",
    "embeddings",
    "transformers",
    "software-engineering",
    "machine-learning-on-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
# The deep-learning stack needed to actually run GraphCodeBERT.
model = [
    "torch>=1.9.0",
    "transformers>=4.18.0",
]
# Non-linear projection support.
umap = ["umap-learn>=0.5.0"]
# Everything needed to reproduce the paper end-to-end.
full = [
    "torch>=1.9.0",
    "transformers>=4.18.0",
    "umap-learn>=0.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "nltk>=3.6.0",
]
# Developer tooling.
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/jorge-martinez-gil/graphcodebert-interpretability"
Repository = "https://github.com/jorge-martinez-gil/graphcodebert-interpretability"
Paper = "https://doi.org/10.1142/S0218194025500160"
Preprint = "https://arxiv.org/abs/2410.05275"
Issues = "https://github.com/jorge-martinez-gil/graphcodebert-interpretability/issues"

[project.scripts]
gcbi = "graphcodebert_interpretability.cli:main"

[tool.setuptools]
packages = ["graphcodebert_interpretability"]

[tool.pytest.ini_options]
markers = [
    "model: tests that require torch/transformers and the model weights (deselect with -m 'not model').",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
